Edited collapse buttons, reworked logic behind both buttons, fixed auto-collapse bugging out

--- a/src/app/server-page/server-page.component.scss
+++ b/src/app/server-page/server-page.component.scss
@@ -60,16 +60,16 @@
   }
 
   &-btn{
-    overflow: hidden;
-    transition: 0.3s all ease;
-    background-color: var(--dark-grey);
+
+    transition: 0.1s all ease;
+    background-color: var(--grey);
     outline: none;
     border-radius: 0 10px 10px 0;
     border: 1px solid var(--light-grey);
     border-left: none;
     position:absolute;
     top: 50%;
-    left: calc(14rem);
+    left: calc(14rem + 69px + 1.4rem);
     transform: translateX(14rem);
     transform: translateY(-50%);
     height: 100px;
@@ -77,37 +77,31 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 1000;
+
+    &:hover{
+      background-color: var(--grey);
+      cursor:pointer;
+      width: 9px;
+    }
   }
 
 }
 
-.side-group{
-  position:relative;
-}
+// .side-group{
+//   position:relative;
+// }
 
 .main-content {
   width: calc(100% - 14rem);
   background-color: var(--grey);
 
-
-  &::-webkit-scrollbar {
-    width: 0px;
-    background-color: #f5f5f500;
-
-  }
-  &::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    background-color: var(--light-grey);
-  }
-
-  &:hover::-webkit-scrollbar{
-    width:5px;
-  }
-
 }
 
 .toggle-icon{
-  color:var(--light-grey)
+  color:var(--light-grey);
+  font-weight: 700;
+
 }
 
 
